--- a/manifests/configmap.yaml
+++ b/manifests/configmap.yaml
@@ -29,7 +29,7 @@ data:
                 </div>
                 <button type="submit">Login</button>
                 <p class="signup-text">
-                    Don't have an account? <a href="#">Sign Up</a>
+                    Don't have an account?---check <a href="#">Sign Up</a>
                 </p>
             </form>
         </div>
